Opened 8 years ago

Closed 8 years ago

#13058 closed bug (fixed)

Web Positive Crashes hrev50670

Reported by: DFergFLA Owned by: pulkomandy
Priority: high Milestone: Unscheduled
Component: Applications/WebPositive Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

I just updated my haiku using the pkgman update command. WebPositive is giving me a big headache now. As far as I can tell it is Youtube that causes my issue. Overall going to youtube causes WP to:

Lock up - where Web Positive will stop responding to mouse clicks or keyboard, but the window itself will still move. Unable to quit WP, reboot is only recourse.

Out right crash- I have a log for one of these crashes.

I have had WP only load part of the youtube page then crash, start playing a video then crash, or just load the youtube page and then wait a few seconds then crash. But the common thing is that WP will crash or stop responding every time I visit youtube, without fail.

My biggest problem right now is that every time I open WP it tries to open up Youtube because that is the last page it was on, and then crashes... everytime I can't get past it.

Attachments (3)

WebPositive-2412-debug-05-11-2016-23-13-26.report (37.9 KB ) - added by DFergFLA 8 years ago.
WebPositive-786-debug-06-11-2016-01-18-20.report (38.6 KB ) - added by DFergFLA 8 years ago.
WebPositive-861-debug-06-11-2016-19-52-14.report (51.7 KB ) - added by DFergFLA 8 years ago.
Nov 6th

Download all attachments as: .zip

Change History (9)

comment:1 by pulkomandy, 8 years ago

1) A reboot is NEVER needed to get out of such things. Simply kill the app with ProcessController, Team Monitor, or the Vulcan Death Grip. The only case where this doesn't work is when the app is locked waiting for I/O on a device without timeouts, which Web+ doesn't do (it happens only with direct access to hardware devices).

2) You can delete the Session (in config/settings/WebPositive/Session) so it isn't restored on next start.

3) The actual crash. It seems rather easy to reproduce, I've seen it myself sometimes. It is somewhere in the media kit. I will see if I can do something myslef or if I need help from Barrett.

comment:2 by DFergFLA, 8 years ago

1) I'm sorry but I did try killing it, and the death grip. What I ended up with was the window gone but the program still in the deskbar and I could not start WP again so I rebooted. But that really isn't the main issue anyway, so no big deal.

2) Thanks, I try that..

3) Thanks for looking.

comment:3 by pulkomandy, 8 years ago

The crash should be fixed in hrev50671. Let me know if tthat goes better.

If you manage to get Web+ in the frozen state again, please grab a Debugger report this way: 1) Start Debugger from DeskBar apps 2) Select WebPositive and click "Attach" 3) For each thread except the "debug thread" (usually last one), select the thread then press the "Debug" button 4) From the menu, select "save report"

This will show us what each thread is doing, we can try to understand why they are locked.

There can be lock-ups for a rather long time at the moment. This is because everything is waiting on some video to load. This code should be made more asynchronous.

comment:4 by DFergFLA, 8 years ago

OK, I am now on 50671 and it is much better. I am still getting some crashes but it hasn't locked up on me yet. I have attatched the new crash log. I get it when I exit youtube, or WP, before a video is done playing. If I wait and no video is currently playing I don't get the crash.

Thanks

comment:5 by DFergFLA, 8 years ago

Additional Crash today:

I had 3 tabs open with Youtube was one, Facebook, an an other. I had a video playing in Youbube and I navigated over to an other tab. I was still able to hear the audio of the playing video. When I navigated back to the youtube tab, the tab wa all white with nothing showing on it, a blank page. A few seconds later I got the crash. See attatched.

by DFergFLA, 8 years ago

Nov 6th

comment:6 by pulkomandy, 8 years ago

Resolution: fixed
Status: newclosed

Both bugs fixed in HaikuWebKit 1.6.0. Please open new tickets if you have more problems.

Note: See TracTickets for help on using tickets.